--- a/action.yaml
+++ b/action.yaml
@@ -21,7 +21,7 @@ inputs:
     required: true
     default: 'true'
   reports-dir:
-    description: 'Path to store reports'
+    description: 'Reports base directory'
     required: true
     default: 'build/reports'
 runs:
@@ -29,35 +29,35 @@ runs:
   steps:
     - name: 'Run PHP Checkstyle'
       if: ${{ inputs.run-phpcs == 'true' }}
-      uses: adore-me/gha-php-checkstyle@v1.0.0
+      uses: adore-me/gha-php-checkstyle@v2.0.0
       with:
         php-image: ${{ inputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Run PHP MD'
       if: ${{ inputs.run-phpmd == 'true' }}
-      uses: adore-me/gha-php-md@v1.0.0
+      uses: adore-me/gha-php-md@v2.0.0
       with:
         php-image: ${{ inputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Run PHP CPD'
       if: ${{ inputs.run-phpcpd == 'true' }}
-      uses: adore-me/gha-php-cpd@v1.0.0
+      uses: adore-me/gha-php-cpd@v2.0.0
       with:
         php-image: ${{ inputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Run PHP Stan'
       if: ${{ inputs.run-phpstan == 'true' }}
-      uses: adore-me/gha-php-stan@v1.0.0
+      uses: adore-me/gha-php-stan@v2.0.0
       with:
         php-image: ${{ inputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Save Static Checks artifacts'
       if: always()
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3.1.0
       with:
         name: static-checks-artifacts
         path: ${{ inputs.reports-dir }}
