--- a/action.yaml
+++ b/action.yaml
@@ -3,7 +3,7 @@ description: 'Run static checks on a PHP project, annotate results and upload ar
 inputs:
   php-image:
     description: 'PHP image to use'
-    required: true
+    required: false
   run-phpcs:
     description: 'Run PHP Checkstyle'
     required: true
@@ -27,32 +27,39 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: 'Set PHP image'
+      id: set-php-image
+      run: $GITHUB_ACTION_PATH/set-image.sh
+      shell: bash
+      env:
+        INPUT_PHP_IMAGE: ${{ inputs.php-image }}
+
     - name: 'Run PHP Checkstyle'
       if: ${{ inputs.run-phpcs == 'true' }}
       uses: adore-me/gha-php-checkstyle@v2.0.0
       with:
-        php-image: ${{ inputs.php-image }}
+        php-image: ${{ steps.set-php-image.outputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Run PHP MD'
       if: ${{ inputs.run-phpmd == 'true' }}
       uses: adore-me/gha-php-md@v2.0.0
       with:
-        php-image: ${{ inputs.php-image }}
+        php-image: ${{ steps.set-php-image.outputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Run PHP CPD'
       if: ${{ inputs.run-phpcpd == 'true' }}
       uses: adore-me/gha-php-cpd@v2.0.0
       with:
-        php-image: ${{ inputs.php-image }}
+        php-image: ${{ steps.set-php-image.outputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Run PHP Stan'
       if: ${{ inputs.run-phpstan == 'true' }}
       uses: adore-me/gha-php-stan@v2.0.0
       with:
-        php-image: ${{ inputs.php-image }}
+        php-image: ${{ steps.set-php-image.outputs.php-image }}
         report-dir: ${{ inputs.reports-dir }}
 
     - name: 'Save Static Checks artifacts'
